fix:spacing

--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@
 
   --destructive: oklch(0.577 0.245 27.325);
 
-  --input: oklch(0.922 0 0);
+  --input: #e3cfdc;
 
   --ring: oklch(0.708 0 0);
 
